Add (EN) to find part we need to translate more easilly
Signed-off-by: Haeresis <bruno.lesieur@gmail.com>

--- a/src/v2/examples/vue-20-accessing-parent-component-instance/package.json
+++ b/src/v2/examples/vue-20-accessing-parent-component-instance/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-20-accessing-parent-component-instance",
   "version": "1.0.0",
-  "description": "Vue.js example accessing Parent Component Instance using Google Maps.",
+  "description": "(EN) Vue.js example accessing Parent Component Instance using Google Maps.",
   "main": "index.html",
   "scripts": {
     "start": "serve"
