--- a/src/v2/examples/vue-20-dynamic-components-with-binding/package.json
+++ b/src/v2/examples/vue-20-dynamic-components-with-binding/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-20-dynamic-components-with-binding",
   "version": "1.0.0",
-  "description": "Showing binding to a component's options object.",
+  "description": "(EN) Showing binding to a component's options object.",
   "main": "index.html",
   "scripts": {
     "start": "serve"
