--- a/src/v2/examples/vue-20-programmatic-event-listeners/package.json
+++ b/src/v2/examples/vue-20-programmatic-event-listeners/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-20-programmatic-event-listeners",
   "version": "1.0.0",
-  "description": "Vue.js Programmatic Event Listeners example using Pikaday",
+  "description": "(EN) Vue.js Programmatic Event Listeners example using Pikaday",
   "main": "index.html",
   "scripts": {
     "start": "serve"
